--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 								<h5>Bet size:</h5>
 							</div>
 							<div class="col-6" style="padding-top:5px">
-								<label class="radio-inline"><input type="radio" name="size" id="one">1 P3X</label>
 								<label class="radio-inline"><input type="radio" name="size" id="dotfive">0.5 P3X</label>
+								<label class="radio-inline"><input type="radio" name="size" id="one" checked>1 P3X</label>
 							</div>
 						</div>
 						<div class="row">
