--- a/index.html
+++ b/index.html
@@ -89,9 +89,8 @@
 								<h5>Bet size:</h5>
 							</div>
 							<div class="col-6" style="padding-top:5px">
-								<label class="radio-inline"><input type="radio" name="size" id="dotzeroone">0.01</label>
-								<label class="radio-inline"><input type="radio" name="size" id="dotzerofive">0.05</label>
-								<label class="radio-inline"><input type="radio" name="size" id="dotone" checked>0.1</label>
+								<label class="radio-inline"><input type="radio" name="size" id="dotfive">0.5 P3X</label>
+								<label class="radio-inline"><input type="radio" name="size" id="one" checked>1 P3X</label>
 							</div>
 						</div>
 						<div class="row">
@@ -364,26 +363,15 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-6" style="padding-top:5px;padding-bottom:10px">
+			<div class="col-12 col-lg-6" style="padding-top:5px;padding-bottom:10px">
                 <div class="row">
                     <div class="col-12">
-                        <h2>Vanity Names</h2>
+                        <h2>Shareholders</h2>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-12" style="padding-bottom:10px">
-                        <div class="input-group">
-                            <input id="vanity" type="text" oninput="enableBuyName()" class="form-control" maxlength="32" placeholder="Enter Name">
-                            <div class="input-group-append">
-                                <button id="buyname" onclick="buyName()" type="button" class="btn btn-info" disabled>Buy Name</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-					<div class="row">
+				<div class="row">
                     <div class="col-12">
-                       <h4>Your Vanity Name</h4>
-					   <p id="playername"<p>
+                       <h4>TODO</h4>
                     </div>
                 </div>
             </div>
