--- a/index.html
+++ b/index.html
@@ -370,8 +370,17 @@
                     </div>
                 </div>
 				<div class="row">
-                    <div class="col-12">
-                       <h4>TODO</h4>
+                    <div class="col-12 col-sm-4">
+                       <h4>Total Tokens</h4>
+					   <p id="tokenstotal"></p>
+                    </div>
+					<div class="col-12 col-sm-4">
+                      <h4>Your Tokens</h4>
+					   <p id="mytokens"></p>
+                    </div>
+					<div class="col-12 col-sm-4">
+                      <h4>Your Dividends</h4>
+					   <p id="mydividends"></p>
                     </div>
                 </div>
             </div>
