--- a/index.html
+++ b/index.html
@@ -381,6 +381,7 @@
 					<div class="col-12 col-sm-4">
                       <h4>Your Dividends</h4>
 					   <p id="mydividends"></p>
+					   <button id="withdrawdividendsbutton" onclick="withdrawDividends()" type="button" class="btn btn-info btn-lg" hidden>Withdraw</button>
                     </div>
                 </div>
             </div>
