--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 			<div class="col-12 col-lg-6" style="padding-top:5px;padding-bottom:10px">
                 <div class="row">
                     <div class="col-12">
-                        <h2>Shareholders</h2>
+                        <h2>Dividends</h2>
                     </div>
                 </div>
 				<div class="row">
