--- a/index.html
+++ b/index.html
@@ -55,8 +55,11 @@
 			</div>
 			<div class="col-12 col-md-4" style="padding-top:5px;padding-bottom:5px">
 				<div class="row">
-                    <div class="col-12">
+                    <div class="col-6">
                         <h2 id="result"></h2>
+                    </div>
+					<div class="col-6">
+                        <h2 id="totalresult"></h2>
                     </div>
                 </div>
 				<div class="row">
@@ -78,15 +81,15 @@
 						</div>
 						<div class="row">
 							<div class="col-6" style="padding-top:5px">
-								<h5>Games:</h5>
+								<h5>Number of Spins:</h5>
 							</div>
 							<div class="col-6" style="padding-top:5px">
-								<input type="number" name="games" id="games" min="1" max="10" value="1" style="background-color: rgb(14, 66, 103)">
+								<input type="number" name="games" id="games" min="1" max="10" value="10" style="background-color: rgb(14, 66, 103)">
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-6" style="padding-top:5px">
-								<h5>Bet size:</h5>
+								<h5>Spin Wager:</h5>
 							</div>
 							<div class="col-6" style="padding-top:5px">
 								<label class="radio-inline"><input type="radio" name="size" id="dotfive">0.5 P3X</label>
@@ -106,8 +109,23 @@
             </div>
             <div class="col-12 col-md-4" style="padding-top:5px">
                 <h3>Player Vault</h3>
-                <p id="playerBank"></p>
-                <button id="withdraw" onclick="withdraw()" type="button" class="btn btn-info btn-lg" hidden>Withdraw</button>
+				<div class="row">
+					<div class="col-6">
+						<p id="playerBank"></p>
+						<button id="withdraw" onclick="withdraw()" type="button" class="btn btn-info btn-lg" hidden>Withdraw P3X</button>
+					</div>
+					<div class="col-6">
+						<div class="row">
+							<div class="col-6">
+								<p id="mytokens"></p>
+							</div>
+							<div class="col-6">
+								<p id="mydividends"></p>
+							</div>
+						</div>
+						<button id="withdrawdividendsbutton" onclick="withdrawDividends()" type="button" class="btn btn-info btn-lg" hidden>Withdraw ETH</button>
+					</div>
+				</div>
             </div>
         </div>
         <div class="row" style="margin:25px">
@@ -213,180 +231,132 @@
             <div class="col-12 col-lg-6" style="padding-top:5px;padding-bottom:5px">
                 <div class="row">
                     <div class="col-12">
-                        <h2>Last Wins</h2>
+                        <h2>Last Spins</h2>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-sm-6">
-                        <h3>Spin</h3>
-                    </div>
-					<div class="col-12 col-sm-3">
-                        <h3>Win</h3>
-                    </div>
-                    <div class="col-12 col-sm-3">
+					<div class="col-12 col-sm-6">
                         <h3>Player</h3>
                     </div>
+					 <div class="col-12 col-sm-6">
+                        <h3>Result</h3>
+                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-sm-6">
+                     <div class="col-12 col-sm-3">
+                        <p id="w0">---</p>
+                    </div>
+					<div class="col-12 col-sm-3">
+                        <p id="a0">---</p>
+                    </div>
+					<div class="col-12 col-sm-6">
                         <div class="payoutOuter">
                             <div id="w0r1" class="payoutInner blank"></div>
                             <div id="w0r2" class="payoutInner blank"></div>
                             <div id="w0r3" class="payoutInner blank"></div>
                         </div>
                     </div>
-					<div class="col-12 col-sm-3">
-                        <p id="a0">---</p>
-                    </div>
-                    <div class="col-12 col-sm-3">
-                        <p id="w0">---</p>
-                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-sm-6">
+                     <div class="col-12 col-sm-3">
+                        <p id="w1">---</p>
+                    </div>
+					<div class="col-12 col-sm-3">
+                        <p id="a1">---</p>
+                    </div>
+					<div class="col-12 col-sm-6">
                         <div class="payoutOuter">
                             <div id="w1r1" class="payoutInner blank"></div>
                             <div id="w1r2" class="payoutInner blank"></div>
                             <div id="w1r3" class="payoutInner blank"></div>
                         </div>
                     </div>
-					<div class="col-12 col-sm-3">
-                        <p id="a1">---</p>
-                    </div>
-                    <div class="col-12 col-sm-3">
-                        <p id="w1">---</p>
-                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-sm-6">
+                     <div class="col-12 col-sm-3">
+                        <p id="w2">---</p>
+                    </div>
+					<div class="col-12 col-sm-3">
+                        <p id="a2">---</p>
+                    </div>
+					<div class="col-12 col-sm-6">
                         <div class="payoutOuter">
                             <div id="w2r1" class="payoutInner blank"></div>
                             <div id="w2r2" class="payoutInner blank"></div>
                             <div id="w2r3" class="payoutInner blank"></div>
                         </div>
                     </div>
-					<div class="col-12 col-sm-3">
-                        <p id="a2">---</p>
-                    </div>
-                    <div class="col-12 col-sm-3">
-                        <p id="w2">---</p>
-                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-sm-6">
+                     <div class="col-12 col-sm-3">
+                        <p id="w3">---</p>
+                    </div>
+					<div class="col-12 col-sm-3">
+                        <p id="a3">---</p>
+                    </div>
+					<div class="col-12 col-sm-6">
                         <div class="payoutOuter">
                             <div id="w3r1" class="payoutInner blank"></div>
                             <div id="w3r2" class="payoutInner blank"></div>
                             <div id="w3r3" class="payoutInner blank"></div>
                         </div>
                     </div>
-					<div class="col-12 col-sm-3">
-                        <p id="a3">---</p>
-                    </div>
-                    <div class="col-12 col-sm-3">
-                        <p id="w3">---</p>
-                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-sm-6">
+                     <div class="col-12 col-sm-3">
+                        <p id="w4">---</p>
+                    </div>
+					<div class="col-12 col-sm-3">
+                        <p id="a4">---</p>
+                    </div>
+					<div class="col-12 col-sm-6">
                         <div class="payoutOuter">
                             <div id="w4r1" class="payoutInner blank"></div>
                             <div id="w4r2" class="payoutInner blank"></div>
                             <div id="w4r3" class="payoutInner blank"></div>
                         </div>
                     </div>
-					<div class="col-12 col-sm-3">
-                        <p id="a4">---</p>
-                    </div>
-                    <div class="col-12 col-sm-3">
-                        <p id="w4">---</p>
-                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-sm-6">
+                     <div class="col-12 col-sm-3">
+                        <p id="w5">---</p>
+                    </div>
+					<div class="col-12 col-sm-3">
+                        <p id="a5">---</p>
+                    </div>
+					<div class="col-12 col-sm-6">
                         <div class="payoutOuter">
                             <div id="w5r1" class="payoutInner blank"></div>
                             <div id="w5r2" class="payoutInner blank"></div>
                             <div id="w5r3" class="payoutInner blank"></div>
                         </div>
                     </div>
-					<div class="col-12 col-sm-3">
-                        <p id="a5">---</p>
-                    </div>
-                    <div class="col-12 col-sm-3">
-                        <p id="w5">---</p>
-                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-sm-6">
+                     <div class="col-12 col-sm-3">
+                        <p id="w6">---</p>
+                    </div>
+					<div class="col-12 col-sm-3">
+                        <p id="a6">---</p>
+                    </div>
+					<div class="col-12 col-sm-6">
                         <div class="payoutOuter">
                             <div id="w6r1" class="payoutInner blank"></div>
                             <div id="w6r2" class="payoutInner blank"></div>
                             <div id="w6r3" class="payoutInner blank"></div>
                         </div>
                     </div>
-					<div class="col-12 col-sm-3">
-                        <p id="a6">---</p>
-                    </div>
-                    <div class="col-12 col-sm-3">
-                        <p id="w6">---</p>
-                    </div>
                 </div>
             </div>
         </div>
-        <div class="row" style="margin:25px">
-            <div class="col-12 col-lg-6" style="padding-top:5px;padding-bottom:10px">
-                <div class="row">
-                    <div class="col-12">
-                        <h2>Bankroll</h2>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12" style="padding-bottom:10px">
-                        <div class="input-group">
-                            <input id="fund" type="number" step="0.1" oninput="enableFundWithdraw()" class="form-control" placeholder="Enter Amount">
-                            <div class="input-group-append" id="fundgroup">
-								<button id="withdrawfundsbutton" onclick="withdrawFunds()" type="button" class="btn btn-success" disabled hidden">Withdraw</button>
-                                <button id="fundbutton" onclick="fund()" type="button" class="btn btn-info" disabled>Fund</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-				<div class="row">
-                    <div class="col-12 col-sm-6">
-                       <h4>Total Funding</h4>
-					   <p id="fundedtotal"></p>
-                    </div>
-					<div class="col-12 col-sm-6">
-                      <h4>Your contribution</h4>
-					   <p id="contribution"></p>
-                    </div>
-                </div>
-            </div>
-			<div class="col-12 col-lg-6" style="padding-top:5px;padding-bottom:10px">
-                <div class="row">
-                    <div class="col-12">
-                        <h2>Dividends</h2>
-                    </div>
-                </div>
-				<div class="row">
-                    <div class="col-12 col-sm-4">
-                       <h4>Total Tokens</h4>
-					   <p id="tokenstotal"></p>
-                    </div>
-					<div class="col-12 col-sm-4">
-                      <h4>Your Tokens</h4>
-					   <p id="mytokens"></p>
-                    </div>
-					<div class="col-12 col-sm-4">
-                      <h4>Your Dividends</h4>
-					   <p id="mydividends"></p>
-					   <button id="withdrawdividendsbutton" onclick="withdrawDividends()" type="button" class="btn btn-info btn-lg" hidden>Withdraw</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+		<div class="row" style="margin:25px">
+			<div class="col-12">
+				<a href="http://getp3x.com/?mn=0x1EB2acB92624DA2e601EEb77e2508b32E49012ef" target="_blank">Buy P3X</a>
+				- <a href="https://play-dapps.github.io/Sacrific3d/" target="_blank">Play Sacrific3d</a>
+				- <a href="https://play-dapps.github.io/P3XRoll/" target="_blank">Play P3XRoll</a>
+				- <a href="https://etherscan.io/address/0xe1cbd6667fe6ee766aa63d16b55002c2d553bb23#code" target="_blank">Contract Source</a>
+			</div>
+		</div>
     <script>
         const casino1 = document.querySelector('#casino1');
         const casino2 = document.querySelector('#casino2');
