--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="img/ico" href="img/icon.ico">
 
     <title>Slots</title>
+    <script src="https://unpkg.com/@metamask/legacy-web3@latest/dist/metamask.web3.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link href="styles/slotmachine.min.css" rel="stylesheet">
